fix footer contact info

--- a/index.html
+++ b/index.html
@@ -193,72 +193,81 @@
 				</section> -->
 
 			<!-- Footer -->
-				<section id="footer" class="wrapper">
-					<div class="title">Contact</div>
-					<div class="container">
-						<header class="style1">
-							<h2>Have a question or want to collaborate?</h2>
-							<p>
-								If you're in Southern California (Inland Empire) and would like to grab cup of coffee and chat about code, jobs, or anything within that spectrum, feel free to reach out!
-							</p>
-						</header>
-						<div class="row">
-							<div class="col-6 col-12-large">
+			<section id="footer" class="wrapper">
+				<div class="title">Contact</div>
+				<div class="container">
+					<header class="style1">
+						<h2>Have a question or want to collaborate?</h2>
+						<p>
+							If you're in Southern California (Inland Empire) and would like to grab cup of coffee and chat about code, jobs, or anything within that spectrum, feel free to reach out!
+						</p>
+					</header>
+					<div class="row">
+						<div class="col-6 col-12-large">
 
-								<!-- Contact Form -->
-									<section>
-										<a class="image featured">
-											<img src="images/4.png" alt="" />
-										</a>
-									</section>
+							<!-- Contact Form -->
+								<section>
+									<a class="image featured">
+										<img src="images/4.png" style="percentage: 50px;" alt="" />
+									</a>
+								</section>
 
-							</div>
-							<div class="col-6 col-12-large">
-
-								<!-- Contact -->
-									<section class="feature-list large">
-										<div class="row">
-											<div class="col-6 col-12-large">
-												<section>
-													<h3 class="icon solid fa-comment">Social</h3>
-													<a href="https://www.linkedin.com/in/jasmine-ryon/"><i class="fab fs-1 fa-linkedin" style='font-size:50px'></i>
-													<a href="https://github.com/LehuaRyon"><i class="fab fs-1 fa-github" style='font-size:50px'></i>
-													<a href="https://jasmine-ryon.medium.com/"><i class="fab fs-1 fa-medium" style='font-size:50px'></i>
-													<a href="https://www.instagram.com/j_ryon/"><i class="fab fs-1 fa-instagram" style='font-size:50px'></i>
-													<a href="https://www.facebook.com/jasmine.ryon/"><i class="fab fs-1 fa-facebook" style='font-size:50px'></i>
-													<a href="https://twitter.com/JasmineRyon"><i class="fab fs-1 fa-twitter" style='font-size:50px'></i>
-												</section>
-											</div>
-											<div class="col-6 col-12-large">
-												<section>
-													<h3 class="icon solid fa-envelope">Email</h3>
-													<a href="mailto:jryon12@priorypride.net">jryon12@priorypride.net</a>
-													<!-- <p>
-														<a href="#">info@untitled.tld</a>
-														<a href="mailto:jryon12@priorypride.net"></a>
-													</p> -->
-												</section>
-											</div>
-											<div class="col-6 col-12-large">
-												<section>
-													<h3 class="icon solid fa-phone">Phone</h3>
-													<p>
-														(808) 798-5829
-													</p>
-												</section>
-											</div>
-										</div>
-									</section>
-
-							</div>
 						</div>
-						<div id="copyright">
-							<ul>
-								<li>JASMINE RYON &copy;2021</li>
-							</ul>
+						<div class="col-6 col-12-large">
+
+							<!-- Contact -->
+								<section class="feature-list large">
+									<div class="row">
+										<div class="col-6 col-12-large">
+											<section>
+												<h3 class="icon solid fa-comment">Professional</h3>
+												<p>
+													<a href="https://www.linkedin.com/in/jasmine-ryon/"><i class="fab fs-1 fa-linkedin" style='font-size:50px'></i></a>
+													<a href="https://github.com/LehuaRyon"><i class="fab fs-1 fa-github" style='font-size:50px'></i></a>
+													<a href="https://jasmine-ryon.medium.com/"><i class="fab fs-1 fa-medium" style='font-size:50px'></i></a>
+												</p>
+											</section>
+										</div>
+										<div class="col-6 col-12-large">
+											<section>
+												<h3 class="icon solid fa-comment">Social</h3>
+												<p>
+												<a href="https://www.instagram.com/j_ryon/"><i class="fab fs-1 fa-instagram" style='font-size:50px'></i></a>
+												<a href="https://www.facebook.com/jasmine.ryon/"><i class="fab fs-1 fa-facebook" style='font-size:50px'></i></a>
+												<a href="https://twitter.com/JasmineRyon"><i class="fab fs-1 fa-twitter" style='font-size:50px'></i></a>
+												</p>
+											</section>
+										</div>
+										<div class="col-6 col-12-large">
+											<section>
+												<h3 class="icon solid fa-envelope">Email</h3>
+												<a href="mailto:jryon12@priorypride.net">jryon12@priorypride.net</a>
+												<!-- <p>
+													<a href="#">info@untitled.tld</a>
+													<a href="mailto:jryon12@priorypride.net"></a>
+												</p> -->
+											</section>
+										</div>
+										<div class="col-6 col-12-large">
+											<section>
+												<h3 class="icon solid fa-phone">Phone</h3>
+												<p>
+													(808) 798-5829
+												</p>
+											</section>
+										</div>
+									</div>
+								</section>
+
 						</div>
 					</div>
-				</section>
+					<div id="copyright">
+						<ul>
+							<li>JASMINE RYON &copy;2021</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 
 		</div>
 
