--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -113,7 +113,7 @@
 							<!-- Contact Form -->
 								<section>
 									<a class="image featured">
-										<img src="images/4.png" alt="" />
+										<img src="images/4.png" style="percentage: 50px;" alt="" />
 									</a>
 								</section>
 
@@ -125,13 +125,22 @@
 									<div class="row">
 										<div class="col-6 col-12-large">
 											<section>
+												<h3 class="icon solid fa-comment">Professional</h3>
+												<p>
+													<a href="https://www.linkedin.com/in/jasmine-ryon/"><i class="fab fs-1 fa-linkedin" style='font-size:50px'></i></a>
+													<a href="https://github.com/LehuaRyon"><i class="fab fs-1 fa-github" style='font-size:50px'></i></a>
+													<a href="https://jasmine-ryon.medium.com/"><i class="fab fs-1 fa-medium" style='font-size:50px'></i></a>
+												</p>
+											</section>
+										</div>
+										<div class="col-6 col-12-large">
+											<section>
 												<h3 class="icon solid fa-comment">Social</h3>
-												<a href="https://www.linkedin.com/in/jasmine-ryon/"><i class="fab fs-1 fa-linkedin" style='font-size:50px'></i>
-												<a href="https://github.com/LehuaRyon"><i class="fab fs-1 fa-github" style='font-size:50px'></i>
-												<a href="https://jasmine-ryon.medium.com/"><i class="fab fs-1 fa-medium" style='font-size:50px'></i>
-												<a href="https://www.instagram.com/j_ryon/"><i class="fab fs-1 fa-instagram" style='font-size:50px'></i>
-												<a href="https://www.facebook.com/jasmine.ryon/"><i class="fab fs-1 fa-facebook" style='font-size:50px'></i>
-												<a href="https://twitter.com/JasmineRyon"><i class="fab fs-1 fa-twitter" style='font-size:50px'></i>
+												<p>
+												<a href="https://www.instagram.com/j_ryon/"><i class="fab fs-1 fa-instagram" style='font-size:50px'></i></a>
+												<a href="https://www.facebook.com/jasmine.ryon/"><i class="fab fs-1 fa-facebook" style='font-size:50px'></i></a>
+												<a href="https://twitter.com/JasmineRyon"><i class="fab fs-1 fa-twitter" style='font-size:50px'></i></a>
+												</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-large">
@@ -165,7 +174,7 @@
 				</div>
 			</section>
 
-	</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
