--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">Portfolio</a></li>
+								<li><a href="left-sidebar.html">Blog</a></li>
+								<li><a href="right-sidebar.html">Skills</a></li>
 							</ul>
 						</nav>
 
