--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -27,9 +27,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li class="current"><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">Portfolio</a></li>
+								<li><a href="left-sidebar.html">Blog</a></li>
+								<li class="current"><a href="right-sidebar.html">Skills</a></li>
 							</ul>
 						</nav>
 
