add resume to contact info

--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -161,9 +161,17 @@
 												</p>
 											</section>
 										</div>
+										<div class="col-6 col-12-large">
+											<section>
+												<h3 class="icon solid fa-file-alt">Resume</h3>
+												<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
+												<p>
+													<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Google Document</a>
+												</p>
+											</section>
+										</div>
 									</div>
 								</section>
-
 						</div>
 					</div>
 					<div id="copyright">
