--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -20,13 +20,13 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Portfolio</a></h1>
-							<p>I built out each work listed below, back-end and front-end parts, completely on my own.</p>
+							<!-- <p>I built out each work listed below, back-end and front-end parts, completely on my own.</p> -->
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html">About</a></li>
 								<li class="current"><a href="no-sidebar.html">Portfolio</a></li>
 								<li><a href="left-sidebar.html">Blog</a></li>
 								<li><a href="right-sidebar.html">Skills</a></li>
