--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">About</a></li>
 							<li class="current"><a href="no-sidebar.html">Portfolio</a></li>
 							<li><a href="left-sidebar.html">Blog</a></li>
 							<li><a href="right-sidebar.html">Skills</a></li>
