finish grammar edits

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Jasmine Ryon</title>
@@ -59,11 +54,11 @@
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I build complete web applications with backend API systems to improve the lives of those around me
+							• A web developer who builds web applications with backend API systems to improve the lives of those around me
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I have a passion to create dynamic user experiences by building applications streamlined for efficiency
+							• A passionate coder who creates dynamic user experiences by building applications streamlined for efficiency
 							<br class="mobile-hide" />
 						</p>
 						<p class="style2" style="text-align: center; padding-left: 2rem;">
@@ -71,27 +66,19 @@
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• Transitioning to a path on a collaborative team of talented individuals where I can turn my passion for coding into a fulfilling career, expand my knowledge, and develop new skills
+							• My goal is to work on a collaborative team of talented individuals where I can turn my passion for coding into a fulfilling career where there is room for growth, expand my knowledge, and develop new skills.
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I'm want to build applications that fulfill the needs of user stories with  my strong problem-solving abilities and attention to detail 
+							• With an increased knowledge of critical thinking and problem-solving skills, I want to build applications that fulfill the needs of user stories. 
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I want to ensure successful completion of quality products to clients by being adaptable and having efficient time management skills
+							• I want to to ensure successful completion of quality products to clients by being adaptable and having efficient time management skills.
 							<br class="mobile-hide" />
 						</p>
 						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I want to challenge myself, grow my skillset, and have the ability to make applications that people would love and use daily
-							<br class="mobile-hide" />
-						</p>
-						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I have a deep passion for problem solving and technology and I want to be at the forefront of innovation alongside others to make this world a better place
-							<br class="mobile-hide" />
-						</p>
-						<p class="style1" style="text-align: left; padding-left: 2rem;">
-							• I imagine my dream job to be inclusive, engaging, and a fun place to work
+							• My interests in technology started as a child, and I imagine my dream position is at the forefront of innovation, inclusivity, and equity.
 							<br class="mobile-hide" />
 						</p>
 						<p class="style3">
@@ -267,7 +254,7 @@
 												<h3 class="icon solid fa-file-alt">Resume</h3>
 												<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
 												<p>
-													<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Google Document</a>
+													<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Updated: 01/04/22</a>
 												</p>
 											</section>
 										</div>
