--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Blog</title>
@@ -163,7 +158,7 @@
 											<h3 class="icon solid fa-file-alt">Resume</h3>
 											<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
 											<p>
-												<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Google Document</a>
+												<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Updated: 01/04/22</a>
 											</p>
 										</section>
 									</div>
