--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Skills</title>
@@ -95,7 +90,7 @@
 									<div class="col-6 col-12-medium">
 										<section>
 											<h3 class="icon solid fa-check">Nurturing Leader</h3>
-											<p>Listens empathetically, knows when a team is struggling, and drives a team to a solution with encouragement and guiding coaching questions to advance individuals' growth</p>
+											<p>Listens empathetically, knows when a team is struggling, drives a team to a solution with encouragement and guiding coaching questions to advance individuals' growth</p>
 										</section>
 									</div>
 								</div>
@@ -105,7 +100,7 @@
 						<section id="features">
 							<header class="style1">
 								<h2>I have developed and launched multiple applications from scratch, maintaining the development of their back-end and front-end codebases.</h2>
-								<p>I can refactor existing applications, improve code readibility, separate concerns into separate functions/classes/modules, and move around application architecture to be event-based</p>
+								<p>I can refactor existing applications, improve code readibility, separate concerns into separate functions/classes/modules, and move around application architecture to be event-based.</p>
 							</header>
 							<div class="feature-list">
 								<div class="row">
@@ -206,7 +201,7 @@
 										<h3 class="icon solid fa-file-alt">Resume</h3>
 										<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
 										<p>
-											<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Google Document</a>
+											<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Updated: 01/04/22</a>
 										</p>
 									</section>
 								</div>
