--- a/blog.html
+++ b/blog.html
@@ -18,12 +18,21 @@
 					</div>
 
 				<!-- Nav -->
-					<nav id="nav">
+					<!-- <nav id="nav">
 						<ul>
 							<li><a href="index.html">About</a></li>
 							<li class="current"><a href="no-sidebar.html">Portfolio</a></li>
 							<li><a href="left-sidebar.html">Blog</a></li>
 							<li><a href="right-sidebar.html">Skills</a></li>
+						</ul>
+					</nav> -->
+
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">About</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li class="current"><a href="blog.html">Blog</a></li>
+							<li><a href="skills.html">Skills</a></li>
 						</ul>
 					</nav>
 
