add image for thumbnail linkedin

--- a/skills.html
+++ b/skills.html
@@ -80,7 +80,7 @@
 									</div>
 									<div class="col-6 col-12-medium">
 										<section>
-											<h3 class="icon solid fa-check">Collaborative</h3>
+											<h3 class="icon solid fa-check">Collaborativeness</h3>
 											<p>Social in pair and group programming in addition to learning a lot from others in the process and being receptive to feedback</p>
 										</section>
 									</div>
