--- a/skills.html
+++ b/skills.html
@@ -86,19 +86,19 @@
 									</div>
 									<div class="col-6 col-12-medium">
 										<section>
-											<h3 class="icon solid fa-check">Analytical</h3>
+											<h3 class="icon solid fa-check">Analytical Thinking</h3>
 											<p>Designs and implements solutions to every day encounters of problems, making code work not only in isolation, but as a whole</p>
 										</section>
 									</div>
 									<div class="col-6 col-12-medium">
 										<section>
-											<h3 class="icon solid fa-check">Attentive Learner</h3>
+											<h3 class="icon solid fa-check">Attentive Learning</h3>
 											<p>Continuously improving and upskilling for clarity while also staying up to date with new technologies</p>
 										</section>
 									</div>
 									<div class="col-6 col-12-medium">
 										<section>
-											<h3 class="icon solid fa-check">Nurturing Leader</h3>
+											<h3 class="icon solid fa-check">Lead Nurturing</h3>
 											<p>Listens empathetically, knows when a team is struggling, drives a team to a solution with encouragement and guiding coaching questions to advance individuals' growth</p>
 										</section>
 									</div>
