--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>Jasmine Ryon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jsgl5meywY0CFgeK4S3VM0CU-21AfKF8hBueBb1RPImusS2R19LLWQJFDhXtyN99pF0&usqp=CAU" />
+		<!-- <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jsgl5meywY0CFgeK4S3VM0CU-21AfKF8hBueBb1RPImusS2R19LLWQJFDhXtyN99pF0&usqp=CAU" /> -->
+		<meta property=”og:image” content=”https://www.linkedintraining.co.uk/image-name.jpg” />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
