--- a/skills.html
+++ b/skills.html
@@ -4,6 +4,7 @@
 		<title>Skills</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property=”og:image” content=”https://www.linkedintraining.co.uk/image-name.jpg” />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="right-sidebar is-preload">
