--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jsgl5meywY0CFgeK4S3VM0CU-21AfKF8hBueBb1RPImusS2R19LLWQJFDhXtyN99pF0&usqp=CAU" /> -->
-		<meta property=”og:image” content=”https://www.linkedintraining.co.uk/image-name.jpg” />
+		<meta property=”og:image” content=”https://miro.medium.com/fit/c/262/262/1*iGvRnpCaHu8BlPDWoZUb-w.png” />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
