--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 		<title>Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property=”og:image” content=”https://miro.medium.com/fit/c/262/262/1*iGvRnpCaHu8BlPDWoZUb-w.png” />
+		<meta name="image" property="og:image" content="https://miro.medium.com/fit/c/262/262/1*iGvRnpCaHu8BlPDWoZUb-w.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="left-sidebar is-preload">
