finalized photo thumbnail

--- a/skills.html
+++ b/skills.html
@@ -4,8 +4,7 @@
 		<title>Skills</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- <meta name="image" property="og:image" content="https://miro.medium.com/fit/c/262/262/1*iGvRnpCaHu8BlPDWoZUb-w.png"> -->
-		<meta name="image" property="og:image" src="images/2.png"">
+		<meta name="image" property="og:image" content="https://miro.medium.com/fit/c/131/131/1*qmwnxedCMkN6szfmln_7Og.jpeg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="right-sidebar is-preload">
