--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Jasmine Ryon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="image" property="og:image" content="https://miro.medium.com/fit/c/131/131/1*qmwnxedCMkN6szfmln_7Og.jpeg">
+		<meta name="image" property="og:image" content="https://lh3.googleusercontent.com/15HszV4jfCuBRlmSimoFXEQwnQLkyXCOx-Y8ncRk4TxQ1Sm4cra5IXQGxKR59RLuZmk1eIIqNER0aDY3M6MR83rnn3QuVQlWiou2Db0">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
