add author meta tag

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="image" property="og:image" content="https://lh3.googleusercontent.com/15HszV4jfCuBRlmSimoFXEQwnQLkyXCOx-Y8ncRk4TxQ1Sm4cra5IXQGxKR59RLuZmk1eIIqNER0aDY3M6MR83rnn3QuVQlWiou2Db0">
+		<meta name="author" content="Jasmine Ryon">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="no-sidebar is-preload">
