--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">About</a></li>
-								<li class="current"><a href="portfolio.html">Portfolio</a></li>
+								<li class="current"><a href="portfolio.html">Projects</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="skills.html">Skills</a></li>
 							</ul>
