--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Portfolio</a></h1>
+							<h1><a href="index.html">Projects</a></h1>
 							<!-- <p>I built out each work listed below, back-end and front-end parts, completely on my own.</p> -->
 						</div>
 
