--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">About</a></li>
-								<li><a href="portfolio.html">Portfolio</a></li>
+								<li><a href="portfolio.html">Projects</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li class="current"><a href="skills.html">Skills</a></li>
 							</ul>
