--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">About</a></li>
-							<li><a href="portfolio.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li class="current"><a href="blog.html">Blog</a></li>
 							<li><a href="skills.html">Skills</a></li>
 						</ul>
