--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">About</a></li>
-								<li><a href="portfolio.html">Projects</a></li>
+								<li><a href="projects.html">Projects</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="skills.html">Skills</a></li>
 							</ul>
