--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 
 			<!-- Highlights -->
 			<section id="highlights" class="wrapper style3">
-				<div class="title">Projects</div>
+				<div class="title">Applications</div>
 				<div class="container">
 					<div class="row aln-center">
 						<div class="col-6 col-12-small">
