--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-check">Current Town</h3>
-												<p>Moved to Riverside, California when I was 20 years old and reside here with my wife and our cat.</p>
+												<p>Moved to Riverside, California in 2014 and reside here with my wife and our cat.</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
