fix image about

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					</div>
 
 					<!-- Image -->
-					<a class="image featured">
+					<a class="image about">
 						<br><br><br>
 						<img src="images/1.png" alt="" />
 					</a>
