see if image works

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Jasmine Ryon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="image" property="og:image" content="https://miro.medium.com/fit/c/262/262/1*iGvRnpCaHu8BlPDWoZUb-w.png">
+		<meta name="image" property="og:image" content="	https://scontent-sjc3-1.cdninstagram.com/v/t51.288…rft0fCflEkd-hBV5QLdKDA&oe=61F69A62&_nc_sid=30a2ef">
 		<meta name="author" content="Jasmine Ryon">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
