--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Jasmine Ryon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="image" property="og:image" content="https://scontent-sjc3-1.cdninstagram.com/v/t51.2885-15/e35/14711930_1664650040514510_1643590684604628992_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=xFavnGcmM1cAX9FX1Vj&edm=ALQROFkBAAAA&ccb=7-4&ig_cache_key=MTM2NDI2MDY0OTU1MDYxNzg1Mw%3D%3D.2-ccb7-4&oh=00_AT9vMKkj5_PGVBi8pXu_TmHES30qjIdckfrEZn7-nDP3hQ&oe=61F76EA0&_nc_sid=30a2ef">
+		<meta name="image" property="og:image" content="https://jasmine-ryon.netlify.app/images/1-5.jpg">
 		<meta name="author" content="Jasmine Ryon">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
