--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 												<h3 class="icon solid fa-file-alt">Resume</h3>
 												<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
 												<p>
-													<a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Updated: 01/04/22</a>
+													<a href="https://docs.google.com/document/d/1iqRNi-_kHObEUNOaN2WJHKgfa5Aey9jI/edit#heading=h.gjdgxs">Updated: 04/17/23</a>
 												</p>
 											</section>
 										</div>
