--- a/index.html
+++ b/index.html
@@ -31,15 +31,6 @@
 					</div>
 
 					<!-- Nav -->
-						<!-- <nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">About</a></li>
-								<li><a href="no-sidebar.html">Portfolio</a></li>
-								<li><a href="left-sidebar.html">Blog</a></li>
-								<li><a href="right-sidebar.html">Skills</a></li>
-							</ul>
-						</nav> -->
-
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">About</a></li>
@@ -265,7 +256,7 @@
 												<h3 class="icon solid fa-file-alt">Resume</h3>
 												<!-- <h3 class="icon solid fa-file-alt"><a href="https://docs.google.com/document/d/101hIN-hx-lMt7HpunlHnGyLHEoCVaeaMvFDdAqDl8kc/edit">Resume</a></h3> -->
 												<p>
-													<a href="https://docs.google.com/document/d/1iqRNi-_kHObEUNOaN2WJHKgfa5Aey9jI/edit#heading=h.gjdgxs">Updated: 04/17/23</a>
+													<a href="https://docs.google.com/document/d/1-pcPUMUpQ04_rByojUyCT6DtxxFksZVoQv5tC_frGYU/edit?usp=sharing">Updated: 07/19/23</a>
 												</p>
 											</section>
 										</div>
